test-cases/final-dump/incompatible_generics.exp
Error detected during type checking of module(s) incompatible_generics
[91mfinal-dump/incompatible_generics.wybe:1:23: Type error in call to proc =, argument 1
[0m[91mfinal-dump/incompatible_generics.wybe:1:23: Type error in call to proc =, argument 2
[0m[91mfinal-dump/incompatible_generics.wybe:1:23: Type of i incompatible with ?j
[0m
