test-cases/final-dump/incompatible_generics.wybe
def foo(i:I, ?j:J) { ?j = i }
